[project]
name = "comfyui-prompt-format"
description = "Adds a button that formats the prompts in textfields"
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-prompt-format"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Prompt Format"
Icon = ""
