[project]
name = "comfyui-prompt-format"
description = "Add a button that formats the prompts in textfields"
version = "1.0.1"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-prompt-format"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Prompt Format"
Icon = ""
